improved css to prevent overflow

--- a/src/styles/Chatbot.module.scss
+++ b/src/styles/Chatbot.module.scss
@@ -11,6 +11,7 @@
   position: relative;
   width: 400px;
   height: 450px;
+  max-height: 80vh;
   border-radius: 8px;
   background-color: #f1f1f1;
   padding: 16px;
@@ -25,6 +26,7 @@
 
 .chat-container-expanded {
   width: 700px;
+  max-width: 100vw;
   height: 80vh;
   max-height: 800px;
 }
